# rescueops-revenue-rescue-agent

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
data/: demo_workspace.json  rescue_policy.json  risk_taxonomy.json
deploy/: rescueops.env.example  rescueops.service
rescueops/: __init__.py  data_loader.py  demo.py  evidence_provider.py  evidence_scoring.py  http_app.py  mcp_business_server.py  mcp_client.py  models.py  rescue_policy.py  rescue_reasoner.py  risk_engine.py  rts_search.py  signal_discovery.py  slack_ai_agent.py  slack_blocks.py  socket_app.py
slack/: rescueops_manifest.example.yaml
tests/: test_http_app.py  test_mcp_integration.py  test_rescue_reasoner.py  test_risk_engine.py  test_rts_search.py  test_slack_ai_agent.py  test_socket_app.py
