[project]
name = "rescueops"
version = "0.1.0"
description = "Slack-native revenue rescue agent with Slack Real-Time Search, Slack AI, and MCP business context"
requires-python = ">=3.11"
dependencies = [
    "slack_bolt>=1.28.0",
]

[tool.setuptools]
packages = ["rescueops"]

[tool.pytest.ini_options]
pythonpath = ["."]
